terraform-advanced/alb.tf
# ALB itself
resource "aws_lb" "alb" {
  name                       = "${var.environment}-${var.app}-alb"
  subnets                    = [aws_subnet.public_1.id, aws_subnet.public_2.id]
  load_balancer_type         = "application"
  security_groups            = [aws_security_group.alb_sg.id]
  enable_deletion_protection = false
}

# Target group for ALB
resource "aws_lb_target_group" "alb_tg" {
  name        = "${var.environment}-${var.app}-tg"
  port        = 8000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    healthy_threshold = "3"
    interval          = "90"
    protocol          = "HTTP"
    matcher           = "200-299"
    timeout           = "20"
    path              = "/login"
  }
}

# ALB listener for http
resource "aws_lb_listener" "http_forward" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"


  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.alb_tg.arn

  }
}


# ALB listener for https
# resource "aws_lb_listener" "https_forward" {
#   load_balancer_arn = aws_lb.alb.arn
#   port              = 443
#   protocol = "HTTPS"
#   ssl_policy = "ELBSecurityPolicy-2016-08"
#   certificate_Arn = aws_acm_certificate.cert.arn

#   default_action {
#     type = "forward"
#     target_group_arn = aws_lb_target_group.alb.arn
#   }
# }


# ALB security group (port 80 and 443 open to world)

resource "aws_security_group" "alb_sg" {
  name        = "${var.environment}-${var.app}alb-security-group"
  description = "Allow HTTP and HTTPS traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-${var.app}-alb-sg"
  }
}
